--- a/index.html
+++ b/index.html
@@ -1,76 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Remembering Albert Camus</title>
+	<link rel="stylesheet" href="/home/jason/Projects/tribute/style.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+
 </head>
 <body>
- <!-- Container for the image gallery -->
+<!--This is going to use the picture example that was used in the YouTube video --> 	
 <div class="container">
-
-  <!-- Full-width images with number text -->
-  <div class="mySlides">
-    <div class="numbertext">1 / 6</div>
-      <img src="img_woods_wide.jpg" style="width:100%">
+	<!-- Slider main container -->
+<div class="swiper">
+  <!-- Additional required wrapper -->
+  <div class="swiper-wrapper">
+    <!-- Slides -->
+    <div class="swiper-slide"><img src="camus1.jpg"></div>
+    <div class="swiper-slide"><img src="camus2.jpg"></div>
+    <div class="swiper-slide"><img src="camus3.jpg"></div>
+	<div class="swiper-slide"><img src="camus4.jpg"></div>
+    ...
   </div>
+  <!-- If we need pagination -->
+  <div class="swiper-pagination"></div>
 
-  <div class="mySlides">
-    <div class="numbertext">2 / 6</div>
-      <img src="img_5terre_wide.jpg" style="width:100%">
-  </div>
+  <!-- If we need navigation buttons -->
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>
 
-  <div class="mySlides">
-    <div class="numbertext">3 / 6</div>
-      <img src="img_mountains_wide.jpg" style="width:100%">
-  </div>
 
-  <div class="mySlides">
-    <div class="numbertext">4 / 6</div>
-      <img src="img_lights_wide.jpg" style="width:100%">
-  </div>
+</div>
 
-  <div class="mySlides">
-    <div class="numbertext">5 / 6</div>
-      <img src="img_nature_wide.jpg" style="width:100%">
-  </div>
 
-  <div class="mySlides">
-    <div class="numbertext">6 / 6</div>
-      <img src="img_snow_wide.jpg" style="width:100%">
-  </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+<script>
+	const swiper = new Swiper('.swiper', {
+	  autoplay: {
+	  	delay: 3000,
+	  	disableOnInteraction: false,
+	  },
+	  loop: true,
 
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+	  // If we need pagination
+	  pagination: {
+	    el: '.swiper-pagination',
+	    clickable: true,
+	  },
 
-  <!-- Image text -->
-  <div class="caption-container">
-    <p id="caption"></p>
-  </div>
+	  // Navigation arrows
+	  navigation: {
+	    nextEl: '.swiper-button-next',
+	    prevEl: '.swiper-button-prev',
+	  },
+	});
 
-  <!-- Thumbnail images -->
-  <div class="row">
-    <div class="column">
-      <img class="demo cursor" src="img_woods.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="img_5terre.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="img_mountains.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="img_lights.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="img_nature.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="img_snow.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
-    </div>
-  </div>
-</div> 
-<p>This is a paragraph</p>
+</script>
 </body>
-</html>
+</html>			
