Made changes to href and linking to css page file path

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Remembering Albert Camus</title>
-	<link rel="stylesheet" href="/home/jason/Projects/tribute/resources/css/index.css">
+	<link rel="stylesheet" href="./home/jason/Projects/tribute/resources/css/index.css" type="text/css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 
 </head>
@@ -12,6 +12,14 @@
 	<h1> Remember a legend!</h1>
 	<p>Alber Camus, was a guiding light that took place in the mid 20th century after the end of World War II.  He helped to found and start the philosophical movement known ad Absurdism.  A noted thinker and a gifted writer his works became internationally renowned.  Some examples of his include the famous essay called "The Myth of Sysiphus" and the novel called "The Stranger". </p>
 
+<p>
+	<h2>
+		One of my favorite websites:
+	</h2>
+	<a href="https://www.google.com" target="_blank">
+		Google
+	</a>
+</p>
 <ul>
 	<ol>This is an ordered element</ol>
 	<ol></ol>
